@@ -1,3 +1,7 @@
+2005-03-05  Bruno Haible  <bruno@clisp.org>
+
+	* nls.m4 (AM_MKINSTALLDIRS): Use AC_REQUIRE_AUX_FILE conditionally.
+
 2005-02-24  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.2 released.
